--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3472,7 +3472,7 @@
       </notes>
       <segment>
         <source>Spielernamen einfügen</source>
-        <target>Spielernamen einfügen</target>
+        <target>Insérer le nom du jouer</target>
       </segment>
     </unit>
     <unit id="O23.43H" name="Umfrage schließen">
@@ -3483,7 +3483,7 @@
       </notes>
       <segment>
         <source>Umfrage schließen</source>
-        <target>Umfrage schließen</target>
+        <target>Fermer le sondage</target>
       </segment>
     </unit>
     <unit id="KWP5REq" name="Diese Aktion kann nicht rückgängig gemacht werden. Bist du sicher?">
@@ -3494,7 +3494,7 @@
       </notes>
       <segment>
         <source>Diese Aktion kann nicht rückgängig gemacht werden. Bist du sicher?</source>
-        <target>Diese Aktion kann nicht rückgängig gemacht werden. Bist du sicher?</target>
+        <target>Cette action ne peut pas être annulée. Etes-vous sûr ?</target>
       </segment>
     </unit>
     <unit id="BNvQVoN" name="Animateur-Team">
@@ -3514,7 +3514,7 @@
       </notes>
       <segment>
         <source>Entwickler</source>
-        <target>Devs</target>
+        <target>Développeur</target>
       </segment>
     </unit>
   </file>
