--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -3813,7 +3813,7 @@
       </notes>
       <segment>
         <source>Funktionen für Spezialrollen</source>
-        <target>Funktionen für Spezialrollen</target>
+        <target>Fonctions pour les rôles spéciaux</target>
       </segment>
     </unit>
     <unit id="nG1VP4R" name="Stadt-ID eingeben.">
@@ -3824,7 +3824,7 @@
       </notes>
       <segment>
         <source>Stadt-ID eingeben.</source>
-        <target>Stadt-ID eingeben.</target>
+        <target>Entrez l'identifiant de la ville</target>
       </segment>
     </unit>
     <unit id="NIAMEKG" name="Zugang zu Stadtforum gewähren">
@@ -3835,7 +3835,7 @@
       </notes>
       <segment>
         <source>Zugang zu Stadtforum gewähren</source>
-        <target>Zugang zu Stadtforum gewähren</target>
+        <target>Accorder l'accès au forum ville</target>
       </segment>
     </unit>
     <unit id="3PvUorI" name="Zugang zu Stadtforum entziehen">
@@ -3846,7 +3846,7 @@
       </notes>
       <segment>
         <source>Zugang zu Stadtforum entziehen</source>
-        <target>Zugang zu Stadtforum entziehen</target>
+        <target>Révoquer l'accès au forum ville</target>
       </segment>
     </unit>
     <unit id="K8iqUB2" name="Spezialrollen">
@@ -3857,7 +3857,7 @@
       </notes>
       <segment>
         <source>Spezialrollen</source>
-        <target>Spezialrollen</target>
+        <target>Rôles spéciaux</target>
       </segment>
     </unit>
     <unit id="mupnQII" name="Animateur">
@@ -3868,7 +3868,7 @@
       </notes>
       <segment>
         <source>Animateur</source>
-        <target>Animateur</target>
+        <target>Animacteur</target>
       </segment>
     </unit>
   </file>
