Added "animactor" term (admin)

--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -3896,7 +3896,7 @@
       </notes>
       <segment>
         <source>Animateur</source>
-        <target>AnimACTION team</target>
+        <target>Animactor</target>
       </segment>
     </unit>
   </file>
