--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -3802,7 +3802,7 @@
       </notes>
       <segment>
         <source>Funktionen für Spezialrollen</source>
-        <target>Funktionen für Spezialrollen</target>
+        <target>Funciones para roles especiales</target>
       </segment>
     </unit>
     <unit id="nG1VP4R" name="Stadt-ID eingeben.">
@@ -3813,7 +3813,7 @@
       </notes>
       <segment>
         <source>Stadt-ID eingeben.</source>
-        <target>Stadt-ID eingeben.</target>
+        <target>Ingrese el ID del pueblo.</target>
       </segment>
     </unit>
     <unit id="NIAMEKG" name="Zugang zu Stadtforum gewähren">
@@ -3824,7 +3824,7 @@
       </notes>
       <segment>
         <source>Zugang zu Stadtforum gewähren</source>
-        <target>Zugang zu Stadtforum gewähren</target>
+        <target>Otorgar acceso al foro del pueblo</target>
       </segment>
     </unit>
     <unit id="3PvUorI" name="Zugang zu Stadtforum entziehen">
@@ -3835,7 +3835,7 @@
       </notes>
       <segment>
         <source>Zugang zu Stadtforum entziehen</source>
-        <target>Zugang zu Stadtforum entziehen</target>
+        <target>Revocar acceso al foro del pueblo</target>
       </segment>
     </unit>
     <unit id="K8iqUB2" name="Spezialrollen">
@@ -3846,7 +3846,7 @@
       </notes>
       <segment>
         <source>Spezialrollen</source>
-        <target>Spezialrollen</target>
+        <target>Roles especiales</target>
       </segment>
     </unit>
     <unit id="mupnQII" name="Animateur">
@@ -3857,7 +3857,7 @@
       </notes>
       <segment>
         <source>Animateur</source>
-        <target>Animateur</target>
+        <target>Animador</target>
       </segment>
     </unit>
   </file>
