--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -3809,7 +3809,6 @@
       <notes>
         <note category="german">Funktionen für Spezialrollen</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Funktionen für Spezialrollen</source>
@@ -3820,7 +3819,6 @@
       <notes>
         <note category="german">Stadt-ID eingeben.</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Stadt-ID eingeben.</source>
@@ -3831,7 +3829,6 @@
       <notes>
         <note category="german">Zugang zu Stadtforum gewähren</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Zugang zu Stadtforum gewähren</source>
@@ -3842,7 +3839,6 @@
       <notes>
         <note category="german">Zugang zu Stadtforum entziehen</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Zugang zu Stadtforum entziehen</source>
@@ -3853,7 +3849,6 @@
       <notes>
         <note category="german">Spezialrollen</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Spezialrollen</source>
@@ -3864,11 +3859,21 @@
       <notes>
         <note category="german">Animateur</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/forum/editor.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Animateur</source>
         <target>Animacteur</target>
+      </segment>
+    </unit>
+    <unit id="A.he6Md" name="Community Dashboard">
+      <notes>
+        <note category="german">Community Dashboard</note>
+        <note category="from">twig:///templates/ajax/admin/dash.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Community Dashboard</source>
+        <target>Community Dashboard</target>
       </segment>
     </unit>
   </file>
