--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3532,5 +3532,16 @@
         <target>Entwickler</target>
       </segment>
     </unit>
+    <unit id="1.aaxoN" name="Community-Tools">
+      <notes>
+        <note category="german">Community-Tools</note>
+        <note category="from">twig:///templates/ajax/ajax.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Community-Tools</source>
+        <target>Community-Tools</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
