--- a/translations/ghost+intl-icu.fr.xlf
+++ b/translations/ghost+intl-icu.fr.xlf
@@ -160,7 +160,7 @@
       </notes>
       <segment>
         <source>Registrierung sowie Log-in sind zur Zeit nicht möglich... Die Seite müsste gegen 00.30 wieder erreichbar sein.</source>
-        <target>Impossible de se connecter ou même de s'inscrire... Le site devrait ré-ouvrir d'ici quelques dizaines de minutes..</target>
+        <target>Impossible de se connecter ou même de s'inscrire... Le site devrait ré-ouvrir d'ici quelques dizaines de minutes.</target>
       </segment>
     </unit>
     <unit id="QfY5rKB" name="Und ja, es wird Tote geben...">
