--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -248,7 +248,7 @@
       </notes>
       <segment>
         <source>Werbung ist verboten (Links etc.)</source>
-        <target>La publicité est interdite (liens, etc...)</target>
+        <target>La publicité est interdite (liens, etc.)</target>
       </segment>
     </unit>
     <unit id="58t6egl" name="Heute um">
@@ -1964,7 +1964,7 @@
       </notes>
       <segment>
         <source>Als &lt;strong&gt;Ausgestoßener&lt;/strong&gt; stehen dir die Gemeinschaftsaktionen der Stadt nicht länger zur Verfügung: Bank, Baustelle, Tor, etc...</source>
-        <target><![CDATA[En tant que <strong>paria</strong>, vous n'avez plus accès aux outils communaitaires de la ville : banque, chantiers, porte, etc...]]></target>
+        <target><![CDATA[En tant que <strong>paria</strong>, vous n'avez plus accès aux outils communautaires de la ville : banque, chantiers, porte, etc.]]></target>
       </segment>
     </unit>
     <unit id="M4kyeVr" name="Die Seite wird von Horden von Zombies belagert!">
