--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -1734,7 +1734,7 @@
       </notes>
       <segment>
         <source>Gib den Pseudo des Bürgers ein.</source>
-        <target>Entrez ici le pseudo du citoyen</target>
+        <target>Entrez ici le pseudo du joueur</target>
       </segment>
     </unit>
     <unit id="CMpbuf0">
