Fixing player tag (EN)

--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -3497,7 +3497,7 @@
       </notes>
       <segment>
         <source>Spielernamen einfügen</source>
-        <target>Insert player name</target>
+        <target>Player</target>
       </segment>
     </unit>
     <unit id="O23.43H" name="Umfrage schließen">
