Fixing player tag (ES)

--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3485,7 +3485,7 @@
       </notes>
       <segment>
         <source>Spielernamen einfügen</source>
-        <target>Spielernamen einfügen</target>
+        <target>Jugador</target>
       </segment>
     </unit>
     <unit id="O23.43H" name="Umfrage schließen">
