--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -2154,7 +2154,7 @@
     <unit id="OO3MLkJ" name="Spielernamen einfügen">
       <segment>
         <source>Spielernamen einfügen</source>
-        <target>Spielernamen einfügen</target>
+        <target>Spieler</target>
       </segment>
     </unit>
     <unit id="O23.43H" name="Umfrage schließen">
