Replaced mention of Zombinoia

--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -734,7 +734,7 @@
       </notes>
       <segment>
         <source>Beginne ein neues Leben in der Welt der Verdammten une versuche, so lang wie möglich zu überleben. Wer weiß, ws dich in dieser neuen Stadt erwarten wird?</source>
-        <target>Reencárnate en otro pueblo de Zombinoia y mejora tu estrategia de supervivencia. Quién sabe lo que te espera en esta nueva vida...
+        <target>Reencárnate en otro pueblo de MyHordes y mejora tu estrategia de supervivencia. Quién sabe lo que te espera en esta nueva vida...
 </target>
       </segment>
     </unit>
